--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@types/react-dom": "18.0.9",
     "@vitejs/plugin-react": "3.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "standard": "^17.0.0",
     "typescript": "4.9.3",
     "vite": "4.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
