--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "1.2.2",
     "jwt-decode": "3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "8.0.5",
     "react-router-dom": "6.6.1"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "7.1.25",
     "@vitejs/plugin-react": "3.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "standard": "^17.0.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "standard": "17.0.0",
     "typescript": "4.9.3",
     "vite": "4.0.0"
   },
