--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "4.0.4",
     "eslint-plugin-react-hooks": "4.6.0",
     "standard": "17.1.0",
+    "ts-standard": "^12.0.2",
     "typescript": "5.2.2",
     "vite": "4.4.9"
   },
